CHANGELOG 17 January 2008 Scott Cytacki
1. Added eclipse project files.  Forced the eclipse project to use java 1.4

2. Changed the eclipse project to store built files in eclipse-lib because lib was already
   being used.

CHANGELOG 16 July 2005  Rick Blair

1. Added Apache License Version 2.0

2. Added shutdown fix as identifed by Scott Lewis

3. Added copyright notice.

4. General code cleanup.


CHANGELOG  30 November 2004 rawcoder

1. IPv6 support

   - RFE 890432: IPv6 support implemented

2. Logging

   - Logging is done using the Java Logger API now

3. Bug fixes

   - JmDNS reannounces services after their TTL has timed out.

4. Plattform dependency

   - Due to the changes done for IPv6 support and the logging, 
     JmDNS requires now a JVM supporting a J2SE 1.4 API.


CHANGELOG  6 June 2004 rawcoder

1. General API Changes

   - RFE 868432: Changed listener API to comply with the commonly used
                 EventListener/EventObject idiom 
   - RFE 868433: Added a list method to class JmDNS which can be used to 
                 retrieve a list of available  services without having to 
                implement a ServiceListener.
   - RFE 892855: All API's use now unqualified service instance names

2. General implementation changes

   - JmDNS now runs through the Rendezvous Conformance Test, when the options
     "-M hn" are used.
   - Threads are now handled differently. ServiceListeners and 
     ServiceTypeListeners can not assume anymore that they are invoked from
     the AWT event dispatcher thread.
   - States are now handled explicitly using class DNSState.

3. DNSCache

   - Removed the hash table code and use now a java.util.Hashtable.
   - This reduces the overall size of the class.

4. DNSConstants

   - Added several new time interval constants.

5. DNSEntry

   - Now overrides method hashCode() to return a value, that is consistent with
     method equals().

6. DNSIncoming
